# PyEmits

./: .gitignore  README.md  pyproject.toml  tea.yaml
assets/: icon.afdesign
examples/: anomaly detector.ipynb  forecast at scale.ipynb  multiout demo.ipynb  nn_wrapper.ipynb  test_pyod.ipynb
pyemits/: __init__.py
pyemits/common/: __init__.py  config_model.py  data_model.py  errors.py  feature_engineering.py  py_native_dtype.py  stats.py  validation.py
pyemits/common/io/: connect.py  db.py  local.py
pyemits/common/typing/: __init__.py  data_format.py
pyemits/common/utils/: json_utils.py  misc_utils.py  proxy.py
pyemits/core/: __init__.py
pyemits/core/evaluation/: backtesting.py  data_profile.py  model_evaluation.py
pyemits/core/ml/: base.py  cross_validation.py
pyemits/core/ml/anomaly_detection/: base.py  predictor.py  trainer.py
pyemits/core/ml/regression/: ensemble.py  nn.py  predictor.py  trainer.py
pyemits/core/preprocessing/: __init__.py  aggregation.py  dimensional_reduction.py  misc_utils.py  pipeline.py  scaling.py  splitting.py
pyemits/evaluation/: profile.py
pyemits/forecast/: __init__.py  arima.py  lstm.py  multioutput.py
pyemits/io/: __init__.py  connect.py
pyemits/services/: __init__.py  eda.py
